<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Model Paper"
            android:textSize="20sp"
            android:textColor="@color/transparentBG"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/main_btn_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">


            <Button
                android:text="@string/mp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mp1"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:background="@drawable/round_corner_btn"
                android:textColor="@color/transparentBG"
                android:layout_margin="20dp" />

            <Button
                android:text="@string/mp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mp2"
                android:textSize="20sp"
                android:fontFamily="serif"
                android:background="@drawable/round_corner_btn"
                android:textColor="@color/transparentBG"
                android:layout_margin="20dp" />

            <Button
                android:text="@string/mp3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mp3"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:fontFamily="serif"
                android:background="@drawable/round_corner_btn"
                android:textColor="@color/transparentBG"/>

        </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                ads:adSize="BANNER"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adUnitId="@string/cmrec_ad_mob_banner">
            </com.google.android.gms.ads.AdView>



    </LinearLayout>
</LinearLayout>